cmake_minimum_required(VERSION 3.12)
project(practice)

set(CMAKE_CXX_STANDARD 14)

add_executable(practice eyal_test_1.cpp eyal_test_2.cpp eyal_test_3.cpp)
#add_executable(practice exceptions.cpp)
#add_executable(practice inh-standalone.cpp)
#add_executable(practice template.cpp template_main.cpp)
#add_executable(practice diamond_inh.cpp diamond_main.cpp)
#add_executable(practice inheritece.cpp shapes_inheritence.cpp inherit_main.cpp)
#
#add_executable(practice move_semantics.cpp)
#
#add_executable(practice op_overload.cpp op_overload_main.cpp)

